--- a/frontend/styles/elements/_buttons.scss
+++ b/frontend/styles/elements/_buttons.scss
@@ -31,15 +31,25 @@
   }
 }
 
+.button__container {
+  @include media ($mobile) {
+    width: 100%;
+  }
+  display: inline-block;
+  margin-bottom: 1rem;
+  padding: 2rem;
+  vertical-align: top;
+}
+
 .button {
   @extend %h4;
   @extend %medium;
   border: 0;
-  border-radius: 3px;
   box-shadow: none;
   cursor: pointer;
   display: inline-block;
   font-family: $brand-font-family;
+  font-weight: 500;
   padding: 12px 30px;
   text-decoration: none;
 
@@ -57,7 +67,7 @@
       background-color: transparent;
     }
 
-    &:before {
+    &::before {
       @extend %h4;
       color: $flag-red;
       content: 'X';
@@ -75,8 +85,9 @@
     };
   }
 
-  @include media (mobile) {
+  @include media ($mobile) {
     font-size: 18px;
+    margin-bottom: 1rem;
     padding: 14px;
     text-align: center;
     width: 100%;
