--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -24,6 +24,7 @@
 @import 'components/navigation';
 @import 'components/footer';
 @import 'components/steps';
+@import 'components/panels';
 
 // new components
 @import '../components/TabSwitcher/styles/TabSwitcher';
