--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -238,6 +238,26 @@ block content
   </figure>
   `)
 
+  section(id="section-panels")
+  h2.h2 Panels
+  +codeblock('html', 'Panels',`
+  <div class="panel">
+    <p>This is a panel</p>
+    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+  </div>
+
+  <div class="panel panel--action">
+    <p>This is an action panel</p>
+    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+  </div>
+
+  <div class="panel panel--info">
+    <p>This is an info panel</p>
+    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+  </div>
+  `)
+
+
   section(id="section-patterns")
   h2.h2 Patterns / page sections
   +codeblock('html', 'Steps', `
