re-factor desktop media query, fix #35 - add inset text panels

--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -25,6 +25,8 @@ block content
         li
           a.link(href='#section-media') Media
         li
+          a.link(href='#section-panels') Panels
+        li
           a.link(href='#section-patterns') Patterns
   section(id="section-typography")
   h2.h2 Typography
@@ -285,17 +287,17 @@ block content
   +codeblock('html', 'Panels',`
   <div class="panel">
     <p>This is a panel</p>
-    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+    <img class="lazyload" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
   </div>
 
   <div class="panel panel--action">
     <p>This is an action panel</p>
-    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+    <img class="lazyload" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
   </div>
 
   <div class="panel panel--info">
     <p>This is an info panel</p>
-    <img class=" lazyloaded" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
+    <img class="lazyload" src="/images/placeholder-250x250.png" alt="placeholder - 250x250.png">
   </div>
   `)
 
