--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'elements/buttons';
 @import 'elements/icons';
 @import 'elements/forms';
+@import 'elements/images';
 
 //components
 @import 'components/navigation';
