--- a/frontend/styles/components/_panels.scss
+++ b/frontend/styles/components/_panels.scss
@@ -4,6 +4,10 @@
     // @extnd %col-6;
     width: 50%;
   }
+  @include media($desktop) {
+    // @extnd %col-6;
+    width: 50%;
+  }
   background-color: $light-grey;
   border-top: solid $black .5rem;
   margin-bottom: 1rem;
