--- a/frontend/styles/neat/_grid-settings.scss
+++ b/frontend/styles/neat/_grid-settings.scss
@@ -4,11 +4,10 @@ $column: 90px;
 $gutter: 20px;
 $grid-columns: 12;
 $max-width: 1200px;
-
 // Define your breakpoints
 //$mob: new-breakpoint(min-width 767px 12);
 //$tab: new-breakpoint(min-width 767px 12);
 
-$desktop: max-width $max-width;
+$desktop: min-width 960px;
 $mobile: max-width 767px;
 $tablet: max-width 959px min-width 768px;
