--- a/backend/views/partials/p--xsmall.pug
+++ b/backend/views/partials/p--xsmall.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p.font--xsmall('This is extra small text (14px).')
++p--xsmall('This is extra small text (14px).')
