--- a/backend/views/partials/p--large.pug
+++ b/backend/views/partials/p--large.pug
@@ -1,2 +1,2 @@
 include ../../../frontend/components/core/templates/mixins.pug
-+p.font--large('This is small text (15px).')
++p--large('This is large text (18px).')
