--- a/frontend/styles/elements/_buttons.scss
+++ b/frontend/styles/elements/_buttons.scss
@@ -45,6 +45,7 @@
   @extend %h4;
   @extend %medium;
   border: 0;
+  border-radius: 3px;
   box-shadow: none;
   cursor: pointer;
   display: inline-block;
