update panel bg colour to stone

--- a/frontend/styles/components/_panels.scss
+++ b/frontend/styles/components/_panels.scss
@@ -8,7 +8,7 @@
     // @extnd %col-6;
     width: 50%;
   }
-  background-color: $light-grey;
+  background-color: $stone;
   border-top: solid $black .5rem;
   margin-bottom: 1rem;
   padding: 2rem;
