--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -51,7 +51,7 @@ $button-blue-color: $white;
 $button-blue-color-hover: $white;
 $button-blue-outline: 0;
 
-$button-red-bg-color: $flag-red;
+$button-red-bg-color: $great-red;
 $button-red-bg-color--visited: $mid-blue;
 $button-red-bg-color--hover: $dark-blue;
 $button-red-color: $white;
@@ -64,8 +64,8 @@ $button-transparent-bg-color--visited: transparent;
 $button-transparent-bg-color--hover: transparent;
 $button-transparent-border-outline: 1px;
 
-$button-transparent-color-red: $flag-red;
-$button-transparent-color-red--hover: $great-red;
+$button-transparent-color-red: $great-red;
+$button-transparent-color-red--hover: $flag-red;
 
 $button-transparent-color-blue: $mid-blue;
 $button-transparent-color-blue--hover: $aqua;
