add typography  patterns

--- a/frontend/components/core/templates/mixins.pug
+++ b/frontend/components/core/templates/mixins.pug
@@ -22,6 +22,9 @@ mixin p--small(text, attrs)
 mixin p--large(text, attrs)
   p.font-large=text
 
+mixin p--xlarge(text, attrs)
+  p.font-xlarge=text
+
 mixin a(text, attrs)
   a.link(href='attrs[href]') This is a web hyperlink.
 
