--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -9,20 +9,35 @@ html
       meta(name='viewport' content='width=device-width, initial-scale=1')/
     title EIG Styleguide
     block head_links
-      link(rel="icon", type="image/png", href="images/favicon.ico")
-      link(rel='apple-touch-icon' href='apple-touch-icon.png')/
+      link(rel="icon", type="image/png", href="/images/favicon.ico")
+      link(rel='apple-touch-icon' href='/apple-touch-icon.png')/
       // Place favicon.ico in the root directory
-      link(rel='stylesheet' href='styles/main.css')/
-      link(rel='stylesheet' href='vendor/prism-twilight.css')/
+      link(rel='stylesheet' href='/styles/main.css')/
+      link(rel='stylesheet' href='/vendor/prism-twilight.css')/
   body
     script.
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled')
-    include ./header
+    //- include ./header
+    header
+      h1.h1
+        a(href="/") Great Pattern Library
+      nav
+        ul
+          li
+            a(href='/') Home
+          li
+            a(href='/layout-breakpoints') Layout &amp; Breakpoints
+          li
+            a(href='/colour-typography') Colour &amp; Typography
+          li
+            a(href='/links-buttons') Links &amp; Button
+          li
+            a(href='/patterns/') Patterns
     .outer-container(id="content")
         block content
     // end of outer container
 
-    include ./footer
+    //- include ./footer
     block foot_scripts
       script(src="/vendor/js/jquery.js")
       script(src="/vendor/js/navigation.js")
