--- a/backend/views/pages/layout-breakpoints.pug
+++ b/backend/views/pages/layout-breakpoints.pug
@@ -3,7 +3,7 @@ include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
   section
-    h2.h2 Overview
+    h2.h2 Layouts &amp; Breakpoints
     p This library is a set of shared UI components and patterns used on the great.gov.uk sites.
     nav
       ul
@@ -18,7 +18,7 @@ block content
   ul
     li mobile = less than or equal to 767px
     li desktop = greater than or equal to 768px
-    
+
   section(id="section-layout")
   h2.h2 Layout
   +codeblock('html', 'Grid', `
