--- a/backend/views/pages/links-buttons.pug
+++ b/backend/views/pages/links-buttons.pug
@@ -3,7 +3,7 @@ include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
   section
-    h2.h2 Overview
+    h2.h2 Links &amp; Buttons
     p This library is a set of shared UI components and patterns used on the great.gov.uk sites.
     nav
       ul
