dedupe content on  pages

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -26,7 +26,7 @@ html
           a.gpl-nav__item(href='/') Home
           a.gpl-nav__item(href='/layout-breakpoints') Layout &amp; Breakpoints
           a.gpl-nav__item(href='/colour-typography') Colour &amp; Typography
-          a.gpl-nav__item(href='/links-buttons') Links &amp; Button
+          a.gpl-nav__item(href='/links-buttons') Links &amp; Buttons
           a.gpl-nav__item(href='/forms-inputs') Forms &amp; Inputs
           a.gpl-nav__item(href='/blocks-media') Blocks &amp; Media
           a.gpl-nav__item(href='/patterns/') Patterns
