added current class to library nav items

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -7,7 +7,7 @@ html
       meta(http-equiv='x-ua-compatible' content='ie=edge')/
       meta(name='description' content='')/
       meta(name='viewport' content='width=device-width, initial-scale=1')/
-    title EIG Styleguide
+    title Great Pattern Library | great.gov.uk
     block head_links
       link(rel="icon", type="image/png", href="/images/favicon.ico")
       link(rel='apple-touch-icon' href='/apple-touch-icon.png')/
@@ -23,13 +23,27 @@ html
       h1.h1
         a(href="/") Great Pattern Library
       nav.gpl-nav
-          a.gpl-nav__item(href='/') Home
-          a.gpl-nav__item(href='/layout-breakpoints') Layout &amp; Breakpoints
-          a.gpl-nav__item(href='/colour-typography') Colour &amp; Typography
-          a.gpl-nav__item(href='/links-buttons') Links &amp; Buttons
-          a.gpl-nav__item(href='/forms-inputs') Forms &amp; Inputs
-          a.gpl-nav__item(href='/blocks-media') Blocks &amp; Media
-          a.gpl-nav__item(href='/patterns/') Patterns
+        -
+          let navLinks = [
+            {href: '/', text: 'Home'},
+            {href: '/layout-breakpoints/', text: 'Layout &amp; Breakpoints'},
+            {href: '/colours-typography/', text: 'Colour &amp; Typography'},
+            {href: '/links-buttons/', text: 'Links &amp; Buttons'},
+            {href: '/forms-inputs/', text: 'Forms &amp; Inputs'},
+            {href: '/blocks-media/', text: 'Blocks &amp; Media'},
+            {href: '/patterns/', text: 'Patterns'},
+          ]
+          navLinks.forEach((item, i, arr) => {
+            let classes = []
+            if (item.href === req.path) {
+              classes.push('gpl-nav__item--current')
+            }
+            item.classes = classes
+          })
+
+        each item in navLinks
+          a.gpl-nav__item(href=`${item.href}`, class=item.classes) !{item.text}
+
     .outer-container(id="content")
         block content
     // end of outer container
