add list of teams to the home page

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -7,7 +7,7 @@ html
       meta(http-equiv='x-ua-compatible' content='ie=edge')/
       meta(name='description' content='')/
       meta(name='viewport' content='width=device-width, initial-scale=1')/
-    title Great Pattern Library | great.gov.uk
+    title Great Pattern Library - GPL| great.gov.uk
     block head_links
       link(rel="icon", type="image/png", href="/images/favicon.ico")
       link(rel='apple-touch-icon' href='/apple-touch-icon.png')/
