--- a/backend/views/pages/index.pug
+++ b/backend/views/pages/index.pug
@@ -2,10 +2,18 @@ extends ../layout/base.pug
 include ../../../frontend/components/core/templates/mixins.pug
 include ../../../frontend/components/TabSwitcher/templates/mixins.pug
 block content
-  section
+  section(style='text-align:center;')
     h2.h2 Overview
     p This library is a set of shared UI components and patterns used across the great.gov.uk sites.
-    p Please use the naviagtion above the view the different sections
+    p This library has been built with the following teams in mind:
+    ul
+      li <abbr title="Export readiness">EXRED</abbr> - Export readiness
+      li <abbr title="Export opportunities">EXOPPS</abbr> - Export opportunities
+      li <abbr title="Find a Buyer">FAB</abbr> - Find a Buyer
+      li <abbr title="Invest in Great Britain">IIGB</abbr> - Invest in Great Britain
+      li <abbr title="Selling Online Overseas">SOO</abbr> - Selling Online Overseas
+    br
+    p Please use the navigation above the view the different sections
 
 block append foot_scripts
   // home scripts
