fix #trell0-124 responsive header typography mobile first

--- a/frontend/styles/elements/_buttons.scss
+++ b/frontend/styles/elements/_buttons.scss
@@ -55,7 +55,7 @@
   text-decoration: none;
 
   &-large {
-    font-size: $h3-font-size;
+    font-size: $h3-font-size-mobile;
     padding: 15px 35px;
   }
 
