--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -32,11 +32,16 @@ $link-colour: $mid-blue;
 
 // FONT SIZES
 $base-font-size: 16px;
-$h1-font-size: 48px;
-$h2-font-size: 32px;
-$h3-font-size: 24px;
-$h4-font-size: 18px;
-$paragraph-large-font-size: $h4-font-size;
+$h1-font-size-mobile: 32px;
+$h2-font-size-mobile: 24px;
+$h3-font-size-mobile: 18px;
+$h4-font-size-mobile: $base-font-size;
+
+$h1-font-size-desktop: 48px;
+$h2-font-size-desktop: 32px;
+$h3-font-size-desktop: 24px;
+$h4-font-size-desktop: 18px;
+$paragraph-large-font-size: $h4-font-size-desktop;
 $small: 15px;
 $xsmall: 14px;
 
