--- a/frontend/styles/utilities/_grid.scss
+++ b/frontend/styles/utilities/_grid.scss
@@ -1,26 +1,30 @@
+@import 'neat';
 //extracting burbon-neat grid classes for non-silent implimentation (adding classes to markup)
 
-.outer-container {
-  @include outer-container;
-
-  @include media($desktop) {
-    margin: 0 30px;
-  }
-
-  @include media($tablet) {
-    margin: 0 20px;
-  }
-
-  @include media($mobile) {
-    margin: 0 10px;
-  }
+.grid-container {
+  @include grid-container;
 }
-
-@for $i from 1 through $grid-columns {
-  .col-#{$i} { @include span-columns($i); }
-  %col-#{$i} { @include span-columns($i); }
-}
-
-.omega {
-  @include omega;
-}
+// .outer-container {
+//   @include outer-container;
+//
+//   @include media($desktop) {
+//     margin: 0 30px;
+//   }
+//
+//   @include media($tablet) {
+//     margin: 0 20px;
+//   }
+//
+//   @include media($mobile) {
+//     margin: 0 10px;
+//   }
+// }
+//
+// @for $i from 1 through $grid-columns {
+//   .col-#{$i} { @include span-columns($i); }
+//   %col-#{$i} { @include span-columns($i); }
+// }
+//
+// .omega {
+//   @include omega;
+// }
