--- a/frontend/styles/neat/_grid-settings.scss
+++ b/frontend/styles/neat/_grid-settings.scss
@@ -1,4 +1,4 @@
-@import 'neat-helpers';
+// @import 'neat-helpers';
 
 $gutter: 15px;
 $grid-columns: 12;
@@ -13,6 +13,10 @@ $max-width: 1200px;
 //$mob: new-breakpoint(min-width 767px 12);
 //$tab: new-breakpoint(min-width 767px 12);
 
-$desktop: min-width 960px;
-$mobile: max-width 767px;
-$tablet: max-width 959px min-width 768px;
+$mobile: (max-width: 767px);
+$desktop: (min-width: 960px);
+$tablet: (max-width: 959px) and (min-width 768px);
+
+$media-mobile: 'max-width: 767px';
+$media-tablet: '(min-width: 768px) and (max-width: 959px)';
+$media-desktop: 'min-width: 960px';
