--- a/frontend/styles/utilities/_grid.scss
+++ b/frontend/styles/utilities/_grid.scss
@@ -4,27 +4,60 @@
 .grid-container {
   @include grid-container;
 }
-// .outer-container {
-//   @include outer-container;
-//
-//   @include media($desktop) {
-//     margin: 0 30px;
-//   }
-//
-//   @include media($tablet) {
-//     margin: 0 20px;
-//   }
-//
-//   @include media($mobile) {
-//     margin: 0 10px;
-//   }
-// }
-//
-// @for $i from 1 through $grid-columns {
-//   .col-#{$i} { @include span-columns($i); }
-//   %col-#{$i} { @include span-columns($i); }
-// }
-//
-// .omega {
-//   @include omega;
-// }
+
+.column-full,
+.column-one-half,
+.column-one-third,
+.column-two-third,
+.column-one-quarter,
+.column-one-twelfth {
+  margin-bottom: $gutter;
+}
+
+.column-full {
+  @include grid-column(12);
+}
+
+.column-one-half {
+  @include grid-column(6);
+  @include mobile {
+    @include grid-column(12);
+  }
+}
+
+.column-one-third {
+  @include grid-column(4);
+  @include mobile {
+    @include grid-column(12);
+  }
+}
+
+.column-two-third {
+  @include grid-column(8);
+  @include mobile {
+    @include grid-column(12);
+  }
+}
+
+.column-one-quarter {
+  @include grid-column(3);
+  @include mobile {
+    @include grid-column(12);
+  }
+}
+
+.column-one-twelfth {
+  @include grid-column(1);
+  @include mobile {
+    @include grid-column(12);
+  }
+  @include tablet {
+    @include grid-column(6);
+  }
+}
+
+.column-debug {
+  background: $stone;
+  min-height: 200px;
+  padding: 15px;
+}
