--- a/frontend/styles/components/_navigation.scss
+++ b/frontend/styles/components/_navigation.scss
@@ -49,7 +49,7 @@
       padding-right: 70px;
       white-space: nowrap;
 
-      @include media($mobile) {
+      @include mobile {
         display: none;
       }
 
@@ -69,7 +69,7 @@
       &:first-child {
         padding-top: 0;
 
-        @include media($mobile) {
+        @include mobile {
           padding-top: 13px;
         }
       }
@@ -90,7 +90,7 @@
           }
           padding-bottom: 2px;
 
-          @include media($mobile) {
+          @include mobile {
             border-style: solid;
             display: block;
             padding-bottom: 10px;
@@ -111,7 +111,7 @@
           }
         }
 
-        @include media($mobile) {
+        @include mobile {
           border: {
             bottom-width: 1px;
             style: solid;
@@ -133,14 +133,14 @@
         border: 0;
       }
 
-      @include media($mobile) {
+      @include mobile {
         padding-left: 25px;
       }
     }
 
     &-services {
 
-      @include media($mobile) {
+      @include mobile {
         background-color: $light-blue;
         font-weight: 500;
       }
@@ -149,23 +149,23 @@
     &-services-section {
       padding-left: 10px;
 
-      @include media($mobile) {
+      @include mobile {
         padding-left: 0;
       }
     }
 
     .outer-container {
-      @include media($mobile) {
+      @include mobile {
         margin: 0;
         width: 100%;
       }
     }
 
-    @include media($mobile) {
+    @include mobile {
       padding: 0;
 
       .col-3 {
-        @include span-columns(12 of 12);
+        @include grid-column(12);
       }
     }
 
@@ -178,7 +178,7 @@
       min-height: 100px;
       padding-left: 20px;
 
-      @include media($mobile) {
+      @include mobile {
         border: 0;
         min-height: inherit;
         padding: 0;
@@ -205,7 +205,7 @@
       width: 25px;
     }
 
-    @include media($mobile) {
+    @include mobile {
       background: transparent;
       border: 1px solid;
       border-color: $border-color-fallback;
@@ -221,7 +221,7 @@
       display: block;
       padding-top: 5px;
 
-      @include media($mobile) {
+      @include mobile {
         border: {
           bottom: 0;
           left: 0;
@@ -239,8 +239,8 @@
       padding: 0 5px 0 2px;
     }
 
-    @include media($mobile) {
-      @include span-columns(12 of 12);
+    @include mobile {
+      @include grid-column(12);
     }
   }
 
@@ -251,7 +251,7 @@
   &-logo {
     padding: 17px 0 4px;
 
-    @include media($mobile) {
+    @include mobile {
       width: 70%;
     }
   }
@@ -274,7 +274,7 @@
   }
 
   &-login {
-    @include media($mobile) {
+    @include mobile {
 
       li {
         padding-right: 0;
