--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -5,12 +5,12 @@
     font-size: 144px;
     line-height: 110px;
 
-    @include media($tablet) {
+    @include tablet {
       font-size: 96px;
       line-height: 80px;
     }
 
-    @include media($mobile) {
+    @include mobile {
       font-size: 90px;
       line-height: 69px;
     }
@@ -19,11 +19,11 @@
   &-content {
     width: 199px;
 
-    @include media($mobile) {
+    @include mobile {
       width: 76%;
     }
 
-    @include media($tablet) {
+    @include tablet {
       width: 70%;
     }
   }
