--- a/frontend/styles/elements/_lists.scss
+++ b/frontend/styles/elements/_lists.scss
@@ -9,7 +9,7 @@
     padding-left: 20px;
     position: relative;
 
-    @include media($mobile) {
+    @include mobile {
       font-size: 15px;
     }
 
@@ -26,7 +26,7 @@
     li {
       display: inline-block;
 
-      @include media($mobile) {
+      @include mobile {
         &.hide-mobile {
           display: none;
         }
@@ -58,4 +58,3 @@
     }
   }
 }
-
