--- a/frontend/styles/utilities/_helpers.scss
+++ b/frontend/styles/utilities/_helpers.scss
@@ -1,3 +1,4 @@
+@import './mixins';
 // Based on https://github.com/csswizardry/inuit.css/blob/master/generic/_helper.scss
 
 // Text alignment
@@ -130,7 +131,7 @@
   display: none;
 
   &-mobile {
-    @include media($mobile) {
+    @include mobile {
       display: none;
     }
   }
