--- a/frontend/styles/utilities/_mixins.scss
+++ b/frontend/styles/utilities/_mixins.scss
@@ -23,3 +23,22 @@
 @mixin bottom-margin($multiple: 1) {
   margin-bottom: (15px * $multiple);
 }
+
+// interpolate media query: https://webdesign.tutsplus.com/tutorials/all-you-ever-need-to-know-about-sass-interpolation--cms-21375
+@mixin mobile {
+  @media #{$media-mobile} {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media #{$media-tablet} {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media #{$media-desktop} {
+    @content;
+  }
+}
