--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -12,7 +12,7 @@ $stone: #dfd5c5;
 $dark-white: #fafafa;
 $grey: #333;
 $mid-grey: #999;
-$light-grey: #dce0df;
+$light-grey: #d8d8d8;
 $purple: #4f0b7b;
 $mid-blue: #00549f;
 $aqua: #007ea3;
