--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -1,30 +1,88 @@
 .steps {
-  &-number {
-    color: $light-grey;
-    display: block;
-    font-size: 144px;
-    line-height: 110px;
+  @include grid-container;
 
-    @include tablet {
-      font-size: 96px;
-      line-height: 80px;
+  &__item {
+    @include grid-column(4);
+    position: relative;
+
+    &__img {
+      display: inline-block;
+      height: 230px;
+      width: 230px;
     }
 
-    @include mobile {
-      font-size: 90px;
-      line-height: 69px;
+    &__text__container {
+      @extend %cf;
+    }
+
+    &__number,
+    &__text__content {
+      float: left;
+      height: 132px;
+    }
+
+    &__number {
+      color: $light-grey;
+      // font-family: Roboto;
+      font-size: 100px;
+      font-weight: 500;
+      letter-spacing: -1px;
+      text-align: right;
+      width: 74px;
+    }
+
+    // &__text__content {
+    //
+    // }
+
+    &::after {
+      background: url('/images/steps-arrow.svg');
+      content: '';
+      display: block;
+      height: 80px;
+      position: absolute;
+      right: 0;
+      top: 115px;
+      transform: translate3d(-25%, -50%, 0);
+      width: 45px;
+
+    }
+
+    &:last-of-type::after {
+      display: none;
     }
   }
 
-  &-content {
-    width: 199px;
-
-    @include mobile {
-      width: 76%;
-    }
-
-    @include tablet {
-      width: 70%;
-    }
-  }
 }
+
+
+// .steps {
+//   &-number {
+//     color: $light-grey;
+//     display: block;
+//     font-size: 144px;
+//     line-height: 110px;
+//
+//     @include tablet {
+//       font-size: 96px;
+//       line-height: 80px;
+//     }
+//
+//     @include mobile {
+//       font-size: 90px;
+//       line-height: 69px;
+//     }
+//   }
+//
+//   &-content {
+//     width: 199px;
+//
+//     @include mobile {
+//       width: 76%;
+//     }
+//
+//     @include tablet {
+//       width: 70%;
+//     }
+//   }
+// }
