* flex-box styling on text container * html beautify HTML snippet in renderComponentExample function * mobile-plus sass mixin

--- a/backend/views/patterns/steps.pug
+++ b/backend/views/patterns/steps.pug
@@ -1,23 +1,26 @@
 include ../../../frontend/components/core/templates/mixins.pug
 .steps
   .steps__item
-    img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
+    .steps__item__img__container
+      img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
     .steps__item__text__container
       .steps__item__number 1
       .steps__item__text__content
         +h4('Step 1')
-        +p('These are the steps to take')
+        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
   .steps__item
-    img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
+    .steps__item__img__container
+      img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
     .steps__item__text__container
       .steps__item__number 2
-      .steps__item_text__content
+      .steps__item__text__content
         +h4('Step 2')
-        +p('These are the steps to take')
+        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
   .steps__item
-    img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
+    .steps__item__img__container
+      img.steps__item__img.lazyload(alt='placeholder - 250x250.png', src='/images/placeholder-250x250.png')
     .steps__item__text__container
       .steps__item__number 3
       .steps__item__text__content
         +h4('Step 3')
-        +p('These are the steps to take')
+        +p('These are the steps to take. These are the steps to take. These are the steps to take. These are the steps to take.')
