--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -32,6 +32,7 @@ $link-colour: $mid-blue;
 
 // FONT SIZES
 $base-font-size: 16px;
+$base-line-height: 23px;
 $h1-font-size-mobile: 32px;
 $h2-font-size-mobile: 24px;
 $h3-font-size-mobile: 18px;
