--- a/frontend/styles/components/_steps.scss
+++ b/frontend/styles/components/_steps.scss
@@ -2,8 +2,24 @@
   @include grid-container;
 
   &__item {
-    @include grid-column(4);
+    @include grid-column(12);
+    @include desktop {
+      @include grid-column(4);
+      margin-bottom: 0;
+    }
+    margin-bottom: 15px;
     position: relative;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+
+    &__img__container {
+      @include desktop {
+        text-align: left;
+      }
+      text-align: center;
+    }
 
     &__img {
       display: inline-block;
@@ -12,44 +28,55 @@
     }
 
     &__text__container {
-      @extend %cf;
+      // @extend %cf;
+      display: flex;
+      height: 132px;
+      justify-content: flex-start;
+      line-height: 132px;
+      margin-top: 15px;
     }
 
     &__number,
     &__text__content {
       float: left;
       height: 132px;
+      line-height: $base-line-height;
     }
 
     &__number {
       color: $light-grey;
-      // font-family: Roboto;
+      flex-basis: 74px;
       font-size: 100px;
       font-weight: 500;
       letter-spacing: -1px;
+      line-height: 100px;
+      margin-right: 15px;
+      position: relative;
       text-align: right;
+      top: -8px;
       width: 74px;
     }
 
-    // &__text__content {
-    //
-    // }
-
-    &::after {
-      background: url('/images/steps-arrow.svg');
-      content: '';
-      display: block;
-      height: 80px;
-      position: absolute;
-      right: 0;
-      top: 115px;
-      transform: translate3d(-25%, -50%, 0);
-      width: 45px;
+    @media (min-width: 1150px) {
+      &::after {
+        background: url('/images/steps-arrow.svg');
+        background-size: contain;
+        content: '';
+        display: block;
+        height: 80px;
+        position: absolute;
+        right: 0;
+        top: 115px;
+        transform: translate3d(-25%, -50%, 0);
+        width: 45px;
+      }
 
     }
 
-    &:last-of-type::after {
-      display: none;
+    &:last-of-type {
+      &::after {
+        display: none;
+      }
     }
   }
 
