--- a/frontend/styles/utilities/_vars.scss
+++ b/frontend/styles/utilities/_vars.scss
@@ -52,8 +52,8 @@ $button-blue-color-hover: $white;
 $button-blue-outline: 0;
 
 $button-red-bg-color: $great-red;
-$button-red-bg-color--visited: $mid-blue;
-$button-red-bg-color--hover: $dark-blue;
+$button-red-bg-color--visited: $great-red;
+$button-red-bg-color--hover: $flag-red;
 $button-red-color: $white;
 $button-red-color-hover: $white;
 $button-red-outline: 0;
